fix: fix game name display on mobile resolution

--- a/src/assets/components/product-page/_product-page.scss
+++ b/src/assets/components/product-page/_product-page.scss
@@ -75,6 +75,8 @@
       font-size: 2rem;
       height: 54px;
       margin-bottom: 42px;
+      padding: 0 5px;
+      align-items: center;
     }
     @include media-mobile {
       font-size: 1.5rem;
